fix: overflow content

--- a/assets/stylesheets/google_one_tap.scss
+++ b/assets/stylesheets/google_one_tap.scss
@@ -6,4 +6,6 @@
 }
 #google_one_tap {
   margin: 0.35em 0;
+  display: inline-block;
+  width: 100%;
 }
